Fixed bug where action slider does not respond to input. Turns out it was z-index.

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -433,7 +433,6 @@ p {
     box-shadow: none;
     border: none;
     background: none;
-    z-index: -10;
 }
 .bx-wrapper img {
     max-width: initial;
